Fix z-index of ReactionNavbar
* Set z-index of ReactionNavbar to 20 (as it was overlapped by some Forms).

--- a/src/css/components/reactions/ReactionNavbar.scss
+++ b/src/css/components/reactions/ReactionNavbar.scss
@@ -1,6 +1,6 @@
 .reaction-header {
   margin-bottom: -24px;
-  z-index: 2;
+  z-index: 20;
 }
 
 .reaction-header__scheme {
